# llm-context-packer

./: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py  schemas.py
app/api/v1/endpoints/: health.py  inspect.py  pack.py
app/cache/: store.py
app/middleware/: rapidapi_auth.py  rate_limiter.py
app/pipeline/: cleaner.py  compressor.py  fetcher.py  format_negotiator.py  orchestrator.py  pdf_extractor.py  tokenizer.py
