[project]
name = "llm-context-packer"
version = "1.0.0"
description = "API that compresses web content into token-optimized markdown for LLMs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "markdownify>=0.14",
    "tiktoken>=0.12",
    "cachetools>=5.5",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "playwright>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]
